--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@
     #43444a 0%,
     #000000 100%
   );
+  --primary-text-color: #f6f4f4;
   --secondary-background-color: #43444a;
-  --primary-text-color: #dddddd;
   --secondary-text-color: #8b8c8d;
   --transition: all 400ms ease;
   /* =========Breakpoints ================*/
@@ -49,4 +49,75 @@ h1 {
   font-family: "Lato", sans-serif;
   font-size: 4.5rem;
   font-weight: 900;
+}
+
+
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    
+  }
+}
+
+
+body{
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--primary-background-color);
+  color:var(--primary-text-color);
+  
+}
+/*============== NAVBAR  =================================*/
+
+
+#navbar{
+  border: 1px solid red;
+  position: fixed;
+  left: 0;
+  max-width: 30%;
+}
+
+#main-title{
+  font-size: 2rem;
+}
+
+/*============== MAIN DOC============================ */
+
+#main-doc{
+  
+  max-width: 60%;
+}
+p{
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 1.8rem;
+  padding: 1rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  
+  
+}
+code{
+  background-color: var(--secondary-background-color);
+  padding: 2rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  font-size: 1.4rem;
+  border-radius: .5rem;
+  display:block;
+}
+h2{
+font-size: 2.2rem;
+color: #ab2b28;
+text-align: center;
+text-decoration: underline;
+
+}
+h3{
+  
+  font-size: 1.8rem;
+  padding: 1rem;
+  margin: 1rem;
+  
 }
